ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartminds-frontend
  labels:
    app.kubernetes.io/name: smartminds_frontend
  annotations:
    force-rollout: "true"  
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: smartminds_frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smartminds_frontend
    spec:
      containers:
      - image: hiroyukikumazawa/smartminds_frontend:http
        name: smartminds-frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
