ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartminds-frontend-service
spec:
  selector:
    app: smartminds-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
