ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-collaboration-ingress
spec:
  tls:
  - hosts:
      - collaboration.smartminds.one
    secretName: collab-secret
  rules:
  - host: collaboration.smartminds.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartminds-frontend-service
            port:
              number: 80
